--- a/spa/package.json
+++ b/spa/package.json
@@ -16,7 +16,8 @@
     "pug": "^2.0.0-rc.4",
     "style-loader": "^0.18.2",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-select": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
