--- a/spa/package.json
+++ b/spa/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "^4.1.3",
     "bootstrap-vue": "^1.0.0-beta.7",
     "pug": "^2.0.0-rc.4",
     "style-loader": "^0.18.2",
