--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,4 +1,5 @@
-FROM tiangolo/uwsgi-nginx-flask
+FROM tiangolo/uwsgi-nginx-flask:python3.7
+RUN apt update && apt install ca-certificates --yes
 COPY setup.py /app
 COPY create_mock.py /app
 COPY alembic.ini /app
