--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,11 @@
 version: '3'
 services:
   backend:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.backend
+    image: cebulany-manager
     ports:
     - "5000:5000"
     environment:
-      SQLALCHEMY_DATABASE_URI: postgresql://cebula:foo@db:5432/cebula
-
-  frontend:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.frontend
-    command: "yarn dev"
-    ports:
-    - "8080:8080"
-    links:
-    - "backend"
+      DATABASE_URI: postgresql://cebula:foo@db:5432/cebula
 
   db:
     image: postgres
@@ -26,3 +14,5 @@ services:
       POSTGRES_USER: cebula
       POSTGRES_DB: cebula
       POSTGRES_PASSWORD: foo
+    volumes:
+      - ./docker-data/postgres:/var/lib/postgresql/data
