--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,5 @@ services:
       POSTGRES_PASSWORD: foo
     volumes:
       - ./docker-data/postgres:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
