--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,9 @@
 FROM node:lts-alpine
 
+ARG URL_PREFIX
+
 ENV NODE_ENV=development
+ENV URL_PREFIX=$URL_PREFIX
 
 # install simple http server for serving static content
 RUN npm install -g http-server
