add queries layer, update requirements, fix small bugs in spa (payment methods)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.4.4
-flask-cors==3.0.8
+Flask==2.0.1
+Flask-Cors==3.0.8
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
 uwsgi==2.0.19.1
 alembic==1.4.2
 onetimepass==1.0.1
