--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,7 @@
 FROM node:lts-alpine
 
 ENV NODE_ENV=development
+ENV NODE_OPTIONS=--openssl-legacy-provider
 
 # install simple http server for serving static content
 RUN npm install -g http-server
