--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,17 +1,17 @@
-FROM tiangolo/uwsgi-nginx-flask:python3.7
+FROM tiangolo/uwsgi-nginx-flask:python3.12
 RUN apt update -y && apt install ca-certificates --yes
 RUN pip3 install psycopg2
 
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt
 
-COPY setup.py /app
+COPY pyproject.toml /app
 COPY create_mock.py /app
 COPY alembic.ini /app
 COPY uwsgi-me.sh /app
 COPY /migrations /app/migrations
-COPY /cebulany /app/cebulany
+COPY src /app/src
 WORKDIR /app
-RUN python setup.py install
+RUN pip3 install .
 EXPOSE 5000
 CMD ./uwsgi-me.sh
