--- a/spa/package.json
+++ b/spa/package.json
@@ -18,7 +18,8 @@
     "style-loader": "^1.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.2",
-    "vue-select": "^3.10.7"
+    "vue-select": "^3.10.7",
+    "vue2-datepicker": "^3.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
