--- a/spa/package.json
+++ b/spa/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
+    "@babel/runtime": "^7.11.1",
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-stage-2": "^7.8.3",
