--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ alembic==1.11.1
 onetimepass==1.0.1
 openpyxl==3.1.5
 py_pdf_parser~=0.13
+google-api-python-client==2.187.0
+google-auth-httplib2==0.2.1
+google-auth-oauthlib==1.2.3
